# spectre-kinetic-engine

./: .gitignore  Cargo.toml  README.md  SKILLS.md  SPEC.md  plan.md
crates/spectre-cli/: Cargo.toml
crates/spectre-cli/src/: main.rs
crates/spectre-core/: Cargo.toml
crates/spectre-core/src/: al_parser.rs  embed.rs  error.rs  lib.rs  matching.rs  pack.rs  planner.rs  registry.rs  similarity.rs  types.rs
crates/spectre-core/tests/: al_integration_test.rs  example_inputs_test.rs  runtime_registry_mutation_test.rs  test_registry.json  test_registry.mcr
crates/spectre-ffi/: Cargo.toml
crates/spectre-ffi/src/: lib.rs  rustler.rs
crates/spectre-train/: Cargo.toml
crates/spectre-train/src/: corpus.rs  distill.rs  error.rs  lib.rs  pack_writer.rs  pca.rs  teacher.rs  weighting.rs
docs/: elixir-integration.md
example/: AL_DICTIONARY.txt  combined_corpus.jsonl  corpus.jsonl  generate_linux_corpus.py  linux_corpus.jsonl  plan_request.json  registry.mcr  tools.json
tests/: al_integration_test.rs
