[package]
name = "spectre-core"
version = "0.1.0"
edition = "2021"
description = "Core library for Spectre Dispatcher: static embedding-based tool selection and argument binding"

[dependencies]
tokenizers = { workspace = true }
ndarray = { workspace = true }
half = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
approx = "0.5"

[lints]
workspace = true
